# Practical-course-in-mathematics

./: .gitignore  README.md
src/uebung04/: mapraview.cpp
src/uebung1/ben/: meina1.cpp
src/uebung1/joshua/: CMakeLists.txt  meina1.cpp
src/uebung1/joshua/pap/: pap.tex
src/uebung1/rick/: meina1.cpp  prog1
src/uebung2/: main.cpp  prog2  shell.sh
src/uebung2a/: CMakeLists.txt  main.cpp  prog2
src/uebung2b/: Makefile  main.cpp  student.cpp
src/uebung3/: Makefile  main.cpp  sparse_matrix.cpp  test.cpp  vector.cpp  vector.h
src/uebung4/: Makefile  bildtest  grayscale.h  greyscale.cpp  greyscale.h  main.cpp  mapraview.cpp  tests.cpp
src/uebung5a/codeA5ab/Code_CMake/: .gitignore  CMakeLists.txt
src/uebung5a/codeA5ab/Code_CMake/cmake/: data_copy.cmake  dependencies.cmake
src/uebung5a/codeA5ab/Code_CMake/include/astern/: graphs.h  mazegraph.h  text_visualizer.h  unit.h  visualiser.h
src/uebung5a/codeA5ab/Code_CMake/src/: a_stern.cpp
src/zusatzaufgabe1/: Makefile  loesung  loesung.cpp
src/zusatzaufgabe2/: .gitignore  Makefile  a3.cpp  a3.h
